--- a/src/app/test-setting/test-transaction-dialog.component.html
+++ b/src/app/test-setting/test-transaction-dialog.component.html
@@ -44,3 +44,42 @@
         </div>
     </mat-card-content>
 </mat-card>
+<mat-card class="summary-card">
+    <mat-card-title>
+      Available Settings
+      <mat-icon class="sort-icon">arrow_upward</mat-icon>
+      <span class="sort-label">Oldest First</span>
+    </mat-card-title>
+    
+  
+    <mat-card-content>
+      <table class="summary-table" *ngIf="savedSettings.length; else noSettings">
+        <thead>
+          <tr>
+            <th>Setting ID</th>
+            <th>Threshold</th>
+            <th>Transaction Types</th>
+            <th>Frequency</th>
+            <th>Indicator</th>
+            <th>Authorization</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let setting of savedSettings">
+            <td>{{ setting.settingsId.slice(0, 8) }}…</td>
+            <td>{{ setting.settingValue.threshold | currency }}</td>
+            <td>{{ setting.settingValue.transactionTypes.join(', ') }}</td>
+            <td>{{ setting.settingValue.frequency.join(', ') }}</td>
+            <td>{{ setting.settingValue.indicator.join(', ') }}</td>
+            <td>{{ setting.settingValue.authorization.join(', ') }}</td>
+          </tr>
+        </tbody>
+      </table>
+  
+      <ng-template #noSettings>
+        <p>No settings available.</p>
+      </ng-template>
+    </mat-card-content>
+  </mat-card>
+  
+  
