--- a/src/app/test-setting/test-transaction-dialog.component.scss
+++ b/src/app/test-setting/test-transaction-dialog.component.scss
@@ -96,7 +96,7 @@ mat-card {
   }
 
   .summary-card {
-    margin: 1.5rem 1rem;
+    margin: .75rem auto 1rem;
     max-width: 1100px;
     width: calc(100% - 2rem);
     padding: 1rem;
@@ -147,5 +147,8 @@ mat-card {
     font-weight: normal;
   }
   
+  mat-card + mat-card {
+    margin-top: 0.25rem;
+  }
   
   
